$Id: History,v 1.4 2000-12-07 12:38:24 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm2 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
07-12-00  mma (testem3-V02-00-03 & testem-noHist)
          remove hbook histograms: GNUmakefile,runAction,eventAction
				   
06-12-00  mma (testem3-V02-00-02 & testem-withHist)
          update of init.mac for new vis commands.
	  G4UItcsh in the main()
	  
25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for min.delta energy cut and table printout
- Update test outputs em tags 1 percent change in deposited energy

June 24, 2000  John Allison  (testem3-V01-01-01)
- Updated TestEm3.out for stand-V01-01-05 and utils-V01-01-03.

June 17, 2000  John Allison  (testem3-V01-00-00)
- Updated TestEm3.out for geant4-01-01-ref-06.