@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em3RunAction.cc,v 1.5 2000-12-07 12:38:25 maire Exp $
+// $Id: Em3RunAction.cc,v 1.6 2001-02-20 13:28:43 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -120,7 +120,7 @@ void Em3RunAction::EndOfRunAction(const G4Run* aRun)
   G4cout.precision(oldprec);
   
   // save Rndm status
-  if (saveRndm == 1)
+  if (saveRndm > 0)
     { HepRandom::showEngineStatus();
       HepRandom::saveEngineStatus("endOfRun.rndm");
     }                         
