@@ -1,4 +1,4 @@
-$Id: History,v 1.4 2000-12-07 12:38:24 maire Exp $
+$Id: History,v 1.5 2001-02-20 13:28:41 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+20-02-01  mma (testem3-V03-00-02)
+          -stepping verbose adapted for STL
+	  -BirkAttenuation function
+	  -save rndm at begin of event
      
 07-12-00  mma (testem3-V02-00-03 & testem-noHist)
           remove hbook histograms: GNUmakefile,runAction,eventAction
